# simplon_projet2_toolbox_microService

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  coverage.xml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  tutoriel.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml  docs.yml  security.yml
app/: main.py
app_api/: Dockerfile  __init__.py  main.py  pyproject.toml
app_api/data/: moncsv.csv  testsqlite.db
app_api/maths/: __init__.py  mon_module.py
app_api/models/: __init__.py  models.py
app_api/modules/: __init__.py  connect.py  crud.py
app_front/: 0_insert.py  1_read.py  Dockerfile  main.py  pyproject.toml
app_front/pages/: 0_insert.py  1_read.py
docs/source/: conf.py  models.rst  mon_module.rst
public/: .buildinfo  .buildinfo.bak  api_db.html  genindex.html  index.html  mon_module.html  objects.inv  py-modindex.html  search.html  searchindex.js
public/.doctrees/: environment.pickle  index.doctree  models.doctree  mon_module.doctree
public/_modules/: index.html
public/_modules/maths/: mon_module.html
public/_modules/modules/: connect.html  crud.html  mon_module.html
public/_sources/: index.rst.txt
tests/: conftest.py  test_api.py  test_db.sqlite  test_main.py  test_math_csv.py
